adding in deepcopy

--- a/chatgpt/update_vqa_prompts.ipynb
+++ b/chatgpt/update_vqa_prompts.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "id": "4aa90ac5",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 76,
    "id": "21562c80",
    "metadata": {},
    "outputs": [],
@@ -30,12 +30,13 @@
     "#import pickle\n",
     "from sys import path\n",
     "path.append('../')\n",
-    "from utils.data_utils import NumpyEncoder"
+    "from utils.data_utils import NumpyEncoder\n",
+    "from copy import deepcopy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "id": "ce33935a",
    "metadata": {},
    "outputs": [
@@ -47,7 +48,7 @@
        " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/jsons/id_0036.json']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 82,
    "id": "b2018a3e",
    "metadata": {},
    "outputs": [],
@@ -72,17 +73,20 @@
     "            j = json.load(f)\n",
     "            j = json.loads(j)\n",
     "\n",
-    "        vqa = j['VQA'].copy()\n",
+    "        vqa = deepcopy(j['VQA'])\n",
+    "        #import sys; sys.exit()\n",
     "        for k, v in vqa['Level 3']['Plot-level questions'].items():\n",
-    "            if k == 'ngaussians' and ', integer' not in k:\n",
+    "            if k == 'ngaussians':\n",
     "                # copy\n",
     "                k2 = k + ', integer'\n",
-    "                v2 = v.copy()\n",
+    "                v2 = deepcopy(v) #.copy()\n",
     "                v2['plot0']['question'] = v2['plot0']['question'] + addition\n",
     "\n",
+    "        #import sys; sys.exit()\n",
     "        vqa['Level 3']['Plot-level questions'][k2] = v2\n",
-    "        jout = j.copy()\n",
+    "        jout = deepcopy(j) #.copy()\n",
     "        jout['VQA'] = vqa\n",
+    "        #import sys; sys.exit()\n",
     "        # dump updated full data\n",
     "        dumped = json.dumps(jout, cls=NumpyEncoder)\n",
     "        with open(jsons[ifile], 'w') as f:\n",
@@ -91,8 +95,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 80,
    "id": "eab5ba8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ngaussians': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  How many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.',\n",
+       "   'A': {'ngaussians': 2},\n",
+       "   'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "   'context': '',\n",
+       "   'question': 'How many gaussians were used to generate the data for the plot in the figure panel?',\n",
+       "   'format': 'Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.'}},\n",
+       " 'ngaussians, integer': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  How many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.',\n",
+       "   'A': {'ngaussians': 2},\n",
+       "   'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "   'context': '',\n",
+       "   'question': 'How many gaussians were used to generate the data for the plot in the figure panel? Please choose an integer number from 1 to 5.',\n",
+       "   'format': 'Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.'}}}"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vqa['Level 3']['Plot-level questions']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c6dfebb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "696bcaf5",
    "metadata": {},
    "outputs": [
     {
@@ -134,16 +178,10 @@
        "     'persona': 'You are a helpful assistant that can analyze images.',\n",
        "     'context': '',\n",
        "     'question': 'How many gaussians were used to generate the data for the plot in the figure panel? Please choose an integer number from 1 to 5.',\n",
-       "     'format': 'Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.'}},\n",
-       "   'ngaussians, integer': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  How many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.',\n",
-       "     'A': {'ngaussians': 2},\n",
-       "     'persona': 'You are a helpful assistant that can analyze images.',\n",
-       "     'context': '',\n",
-       "     'question': 'How many gaussians were used to generate the data for the plot in the figure panel? Please choose an integer number from 1 to 5.',\n",
        "     'format': 'Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.'}}}}}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,19 +192,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "696bcaf5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "1305018c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Level 1': {'Figure-level questions': {},\n",
+       "  'Plot-level questions': {'nbars': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  How many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
+       "     'A': {'nbars': 20},\n",
+       "     'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "     'context': '',\n",
+       "     'question': 'How many bars are there in the specified figure panel?',\n",
+       "     'format': 'Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.'}}}},\n",
+       " 'Level 2': {'Plot-level questions': {'minimum': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  What are the minimum data values  in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum x\" value should be a float, calculated from the data values used to create the plot.',\n",
+       "     'A': {'minimum': {'minimum x': -0.9039030182959754}},\n",
+       "     'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "     'context': '',\n",
+       "     'question': 'What are the minimum data values  in this figure panel? ',\n",
+       "     'format': 'Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum x\" value should be a float, calculated from the data values used to create the plot.'}},\n",
+       "   'maximum': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  What are the maximum data values  in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum x\" value should be a float, calculated from the data values used to create the plot.',\n",
+       "     'A': {'maximum': {'maximum x': -0.1500760324875851}},\n",
+       "     'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "     'context': '',\n",
+       "     'question': 'What are the maximum data values  in this figure panel? ',\n",
+       "     'format': 'Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum x\" value should be a float, calculated from the data values used to create the plot.'}},\n",
+       "   'median': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  What are the median data values  in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median x\" value should be a float, calculated from the data values used to create the plot.',\n",
+       "     'A': {'median': {'median x': -0.4723913577551772}},\n",
+       "     'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "     'context': '',\n",
+       "     'question': 'What are the median data values  in this figure panel? ',\n",
+       "     'format': 'Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median x\" value should be a float, calculated from the data values used to create the plot.'}},\n",
+       "   'mean': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  What are the mean data values  in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean x\" value should be a float, calculated from the data values used to create the plot.',\n",
+       "     'A': {'mean': {'mean x': -0.49127551258688784}},\n",
+       "     'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "     'context': '',\n",
+       "     'question': 'What are the mean data values  in this figure panel? ',\n",
+       "     'format': 'Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean x\" value should be a float, calculated from the data values used to create the plot.'}}}},\n",
+       " 'Level 3': {'Plot-level questions': {'ngaussians': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  How many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.',\n",
+       "     'A': {'ngaussians': 2},\n",
+       "     'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "     'context': '',\n",
+       "     'question': 'How many gaussians were used to generate the data for the plot in the figure panel? Please choose an integer number from 1 to 5.',\n",
+       "     'format': 'Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.'}}}}}"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "j['VQA']"
+   ]
   },
   {
    "cell_type": "code",
