--- a/chatgpt/chatgpt_withapi.ipynb
+++ b/chatgpt/chatgpt_withapi.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "id": "f25dda74-0b62-4a27-9566-aaaa27727c96",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 69,
    "id": "017cce17-f4e8-4df6-a3b5-2edef3714601",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "id": "a2cf577c-4a80-4fbf-b4a0-8a0a61d16b61",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 71,
    "id": "86d2d69b",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 72,
    "id": "04dab3bb",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 73,
    "id": "c6eb280d-d109-4a03-8a76-ea47d5f8960c",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 74,
    "id": "8957d21b",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
        " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/jsons/id_0036.json']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 75,
    "id": "5e019153",
    "metadata": {},
    "outputs": [
@@ -322,10 +322,16 @@
        "     'persona': 'You are a helpful assistant that can analyze images.',\n",
        "     'context': '',\n",
        "     'question': 'How many gaussians were used to generate the data for the plot in the figure panel?',\n",
+       "     'format': 'Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.'}},\n",
+       "   'ngaussians, integer': {'plot0': {'Q': 'You are a helpful assistant that can analyze images.  How many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.',\n",
+       "     'A': {'ngaussians': 2},\n",
+       "     'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "     'context': '',\n",
+       "     'question': 'How many gaussians were used to generate the data for the plot in the figure panel? Please choose an integer number from 1 to 5.',\n",
        "     'format': 'Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.'}}}}}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,166 +369,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "on 0 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0077.pickle\n",
-      "on 1 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0020.pickle\n",
-      "on 2 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0036.pickle\n",
-      "on 3 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0061.pickle\n",
-      "on 4 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0016.pickle\n",
-      "on 5 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0041.pickle\n",
-      "on 6 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0057.pickle\n",
-      "on 7 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0000.pickle\n",
-      "on 8 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0001.pickle\n",
-      "on 9 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0056.pickle\n",
-      "on 10 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0040.pickle\n",
-      "on 11 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0017.pickle\n",
-      "on 12 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0060.pickle\n",
-      "on 13 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0037.pickle\n",
-      "on 14 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0021.pickle\n",
-      "on 15 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0076.pickle\n",
-      "on 16 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0010.pickle\n",
-      "on 17 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0047.pickle\n",
-      "on 18 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0051.pickle\n",
-      "on 19 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0006.pickle\n",
-      "on 20 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0071.pickle\n",
-      "on 21 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0026.pickle\n",
-      "on 22 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0030.pickle\n",
-      "on 23 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0067.pickle\n",
-      "on 24 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0066.pickle\n",
-      "on 25 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0031.pickle\n",
-      "on 26 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0027.pickle\n",
-      "on 27 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0070.pickle\n",
-      "on 28 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0007.pickle\n",
-      "on 29 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0050.pickle\n",
-      "on 30 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0046.pickle\n",
-      "on 31 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0011.pickle\n",
-      "on 32 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0004.pickle\n",
-      "on 33 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0053.pickle\n",
-      "on 34 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0045.pickle\n",
-      "on 35 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0012.pickle\n",
-      "on 36 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0069.pickle\n",
-      "on 37 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0028.pickle\n",
-      "on 38 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0008.pickle\n",
-      "on 39 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0049.pickle\n",
-      "on 40 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0065.pickle\n",
-      "on 41 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0032.pickle\n",
-      "on 42 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0024.pickle\n",
-      "on 43 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0073.pickle\n",
-      "on 44 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0072.pickle\n",
-      "on 45 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0025.pickle\n",
-      "on 46 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0033.pickle\n",
-      "on 47 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0064.pickle\n",
-      "on 48 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0048.pickle\n",
-      "on 49 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0009.pickle\n",
-      "on 50 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0029.pickle\n",
-      "on 51 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0068.pickle\n",
-      "on 52 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0013.pickle\n",
-      "on 53 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0044.pickle\n",
-      "on 54 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0052.pickle\n",
-      "on 55 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0005.pickle\n",
-      "on 56 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0059.pickle\n",
-      "on 57 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0018.pickle\n",
-      "on 58 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0063.pickle\n",
-      "on 59 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0034.pickle\n",
-      "on 60 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0022.pickle\n",
-      "on 61 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0075.pickle\n",
-      "on 62 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0002.pickle\n",
-      "on 63 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0055.pickle\n",
-      "on 64 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0043.pickle\n",
-      "on 65 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0014.pickle\n",
-      "on 66 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0038.pickle\n",
-      "on 67 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0079.pickle\n",
-      "on 68 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0078.pickle\n",
-      "on 69 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0039.pickle\n",
-      "on 70 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0015.pickle\n",
-      "on 71 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0042.pickle\n",
-      "on 72 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0054.pickle\n",
-      "on 73 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0003.pickle\n",
-      "on 74 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0074.pickle\n",
-      "on 75 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0023.pickle\n",
-      "on 76 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0035.pickle\n",
-      "on 77 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0062.pickle\n",
-      "on 78 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0019.pickle\n",
-      "on 79 of 150\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/id_0058.pickle\n"
+      "on 1 of 80\n",
+      "   on question: how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
+      "   on question: what are the maximum data values  in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum x\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question: what are the mean data values  in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean x\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question: what are the median data values  in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median x\" value should be a float, calculated from the data values used to create the plot.\n"
      ]
     }
    ],
