--- a/explore_zooniverse_data.ipynb
+++ b/explore_zooniverse_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 176,
    "id": "34bb7fc6",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 177,
    "id": "759b3c1b",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 178,
    "id": "70f5e969",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 179,
    "id": "dfd09222",
    "metadata": {},
    "outputs": [
@@ -79,6 +79,7 @@
        "      <th>Human median (draw)</th>\n",
        "      <th>Ground Truth nGaussians</th>\n",
        "      <th>Ground Truth Median</th>\n",
+       "      <th>Ground Truth nBars</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -91,6 +92,7 @@
        "      <td>0.055269</td>\n",
        "      <td>1</td>\n",
        "      <td>0.054428</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -101,6 +103,7 @@
        "      <td>0.457472</td>\n",
        "      <td>1</td>\n",
        "      <td>0.478811</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -111,6 +114,7 @@
        "      <td>-0.415863</td>\n",
        "      <td>2</td>\n",
        "      <td>-0.417302</td>\n",
+       "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -121,6 +125,7 @@
        "      <td>-0.707283</td>\n",
        "      <td>2</td>\n",
        "      <td>-0.758364</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -131,6 +136,7 @@
        "      <td>-0.171428</td>\n",
        "      <td>1</td>\n",
        "      <td>-0.178007</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -144,15 +150,22 @@
        "3  annotator1  id_0057.jpeg                 2                 -0.700   \n",
        "4  annotator1  id_0020.jpeg                 1                 -0.200   \n",
        "\n",
-       "   Human median (draw)  Ground Truth nGaussians  Ground Truth Median  \n",
-       "0             0.055269                        1             0.054428  \n",
-       "1             0.457472                        1             0.478811  \n",
-       "2            -0.415863                        2            -0.417302  \n",
-       "3            -0.707283                        2            -0.758364  \n",
-       "4            -0.171428                        1            -0.178007  "
+       "   Human median (draw)  Ground Truth nGaussians  Ground Truth Median  \\\n",
+       "0             0.055269                        1             0.054428   \n",
+       "1             0.457472                        1             0.478811   \n",
+       "2            -0.415863                        2            -0.417302   \n",
+       "3            -0.707283                        2            -0.758364   \n",
+       "4            -0.171428                        1            -0.178007   \n",
+       "\n",
+       "   Ground Truth nBars  \n",
+       "0                  50  \n",
+       "1                  50  \n",
+       "2                  45  \n",
+       "3                  50  \n",
+       "4                  50  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 180,
    "id": "6bae5261",
    "metadata": {},
    "outputs": [
@@ -181,7 +194,7 @@
        "80"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 181,
    "id": "2d3ab63d",
    "metadata": {},
    "outputs": [
@@ -204,7 +217,7 @@
        "<Axes: xlabel='Ground Truth nGaussians', ylabel='Human nGaussians'>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -225,17 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 182,
    "id": "e0424b5c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x10cd0f170>"
+       "<seaborn.axisgrid.JointGrid at 0x10cceb050>"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -257,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 183,
    "id": "f9275221",
    "metadata": {},
    "outputs": [
@@ -267,7 +280,7 @@
        "(-0.8, 0.9)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -299,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 184,
    "id": "b3401e23",
    "metadata": {},
    "outputs": [
@@ -309,7 +322,7 @@
        "(0.19298121815362174, 0.42507057171782764)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 185,
    "id": "13cdfc2a",
    "metadata": {},
    "outputs": [
@@ -332,7 +345,7 @@
        "(0.0364671267337863, 0.11682488786479395)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 186,
    "id": "38843e8c",
    "metadata": {},
    "outputs": [
@@ -378,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 187,
    "id": "92688a4b",
    "metadata": {},
    "outputs": [
@@ -388,7 +401,7 @@
        "80"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 188,
    "id": "168392d0",
    "metadata": {},
    "outputs": [
@@ -411,7 +424,7 @@
        "<Axes: xlabel='Ground Truth nGaussians', ylabel='Human nGaussians'>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -432,17 +445,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 189,
    "id": "009129d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x10cd3f440>"
+       "<seaborn.axisgrid.JointGrid at 0x108afce00>"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -464,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 190,
    "id": "2d644436",
    "metadata": {},
    "outputs": [
@@ -474,7 +487,7 @@
        "(-0.8, 0.9)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -505,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 191,
    "id": "fd1dd18b",
    "metadata": {},
    "outputs": [
@@ -515,7 +528,7 @@
        "(0.7191192015889002, 2.132788369224864)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 192,
    "id": "acd40ce5",
    "metadata": {},
    "outputs": [
@@ -538,7 +551,7 @@
        "(0.14713641903869362, 0.4655998981178578)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 193,
    "id": "e51aefe7",
    "metadata": {},
    "outputs": [
@@ -576,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 194,
    "id": "f4be3833",
    "metadata": {},
    "outputs": [
@@ -606,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 195,
    "id": "0d4b5ed5",
    "metadata": {},
    "outputs": [
@@ -638,6 +651,7 @@
        "      <th>Human median (draw)</th>\n",
        "      <th>Ground Truth nGaussians</th>\n",
        "      <th>Ground Truth Median</th>\n",
+       "      <th>Ground Truth nBars</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -650,6 +664,7 @@
        "      <td>0.055269</td>\n",
        "      <td>1</td>\n",
        "      <td>0.054428</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -660,6 +675,7 @@
        "      <td>0.457472</td>\n",
        "      <td>1</td>\n",
        "      <td>0.478811</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -670,6 +686,7 @@
        "      <td>-0.415863</td>\n",
        "      <td>2</td>\n",
        "      <td>-0.417302</td>\n",
+       "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -680,6 +697,7 @@
        "      <td>-0.707283</td>\n",
        "      <td>2</td>\n",
        "      <td>-0.758364</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -690,6 +708,7 @@
        "      <td>-0.171428</td>\n",
        "      <td>1</td>\n",
        "      <td>-0.178007</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -703,15 +722,22 @@
        "3  annotator1  id_0057.jpeg                 2                 -0.700   \n",
        "4  annotator1  id_0020.jpeg                 1                 -0.200   \n",
        "\n",
-       "   Human median (draw)  Ground Truth nGaussians  Ground Truth Median  \n",
-       "0             0.055269                        1             0.054428  \n",
-       "1             0.457472                        1             0.478811  \n",
-       "2            -0.415863                        2            -0.417302  \n",
-       "3            -0.707283                        2            -0.758364  \n",
-       "4            -0.171428                        1            -0.178007  "
+       "   Human median (draw)  Ground Truth nGaussians  Ground Truth Median  \\\n",
+       "0             0.055269                        1             0.054428   \n",
+       "1             0.457472                        1             0.478811   \n",
+       "2            -0.415863                        2            -0.417302   \n",
+       "3            -0.707283                        2            -0.758364   \n",
+       "4            -0.171428                        1            -0.178007   \n",
+       "\n",
+       "   Ground Truth nBars  \n",
+       "0                  50  \n",
+       "1                  50  \n",
+       "2                  45  \n",
+       "3                  50  \n",
+       "4                  50  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 196,
    "id": "772e3aef",
    "metadata": {},
    "outputs": [
@@ -735,7 +761,7 @@
        " 80)"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 197,
    "id": "1c20f3d3",
    "metadata": {},
    "outputs": [],
@@ -809,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 198,
    "id": "c378d11a",
    "metadata": {},
    "outputs": [],
@@ -827,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 199,
    "id": "dbe9a923",
    "metadata": {},
    "outputs": [
@@ -837,7 +863,7 @@
        "80"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 200,
    "id": "e0f1c8bc",
    "metadata": {},
    "outputs": [
@@ -882,6 +908,7 @@
        "      <th>Human median (draw)</th>\n",
        "      <th>Ground Truth nGaussians</th>\n",
        "      <th>Ground Truth Median</th>\n",
+       "      <th>Ground Truth nBars</th>\n",
        "      <th>LLM nGaussians</th>\n",
        "      <th>LLM Median</th>\n",
        "      <th>LLM nGaussians (int)</th>\n",
@@ -897,6 +924,7 @@
        "      <td>0.055269</td>\n",
        "      <td>1</td>\n",
        "      <td>0.054428</td>\n",
+       "      <td>50</td>\n",
        "      <td>1</td>\n",
        "      <td>0.055</td>\n",
        "      <td>1</td>\n",
@@ -910,6 +938,7 @@
        "      <td>0.457472</td>\n",
        "      <td>1</td>\n",
        "      <td>0.478811</td>\n",
+       "      <td>50</td>\n",
        "      <td>3</td>\n",
        "      <td>0.490</td>\n",
        "      <td>1</td>\n",
@@ -923,6 +952,7 @@
        "      <td>-0.415863</td>\n",
        "      <td>2</td>\n",
        "      <td>-0.417302</td>\n",
+       "      <td>45</td>\n",
        "      <td>3</td>\n",
        "      <td>-0.410</td>\n",
        "      <td>1</td>\n",
@@ -942,13 +972,13 @@
        "1             0.457472                        1             0.478811   \n",
        "2            -0.415863                        2            -0.417302   \n",
        "\n",
-       "   LLM nGaussians  LLM Median LLM nGaussians (int)  \n",
-       "0               1       0.055                    1  \n",
-       "1               3       0.490                    1  \n",
-       "2               3      -0.410                    1  "
+       "   Ground Truth nBars  LLM nGaussians  LLM Median LLM nGaussians (int)  \n",
+       "0                  50               1       0.055                    1  \n",
+       "1                  50               3       0.490                    1  \n",
+       "2                  45               3      -0.410                    1  "
       ]
      },
-     "execution_count": 157,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 201,
    "id": "859316fb",
    "metadata": {},
    "outputs": [
@@ -969,7 +999,7 @@
        "(-0.8, 0.9)"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1015,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 202,
    "id": "46aecaf6",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 203,
    "id": "722c3b0d",
    "metadata": {},
    "outputs": [
@@ -1071,17 +1101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 204,
    "id": "83507bb0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x10cccbbf0>"
+       "<seaborn.axisgrid.JointGrid at 0x10d4e7ec0>"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1111,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 205,
    "id": "e34ec9af",
    "metadata": {},
    "outputs": [
@@ -1121,7 +1151,7 @@
        "(0.21621759088098128, 0.3557556724228227)"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 206,
    "id": "d0de8dfb",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1176,7 @@
        "(0.06581518350713614, 0.21267269710660702)"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 207,
    "id": "ec9489ca",
    "metadata": {},
    "outputs": [
@@ -1172,13 +1202,41 @@
        "(0.0364671267337863, 0.11682488786479395)"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.median(diff1), iqr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f37f93d",
+   "metadata": {},
+   "source": [
+    "## How does accuracy vary across different bar sizes?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "764370ad",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "nparams = [\n",
+    "    {'nb':10, 'nc':2},\n",
+    "    {'nb':20, 'nc':2},\n",
+    "    {'nb':45, 'nc':2},\n",
+    "    {'nb':60, 'nc':2}, # updated so no overlap\n",
+    "    # different set\n",
+    "    {'nb':50, 'nc':1},\n",
+    "    {'nb':50, 'nc':2}, \n",
+    "    {'nb':50, 'nc':3},\n",
+    "    {'nb':50, 'nc':5}\n",
+    "]\n",
+    "```"
    ]
   },
   {
