--- a/zooniverse/parse_zooniverse_human_data.ipynb
+++ b/zooniverse/parse_zooniverse_human_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "1fcb0795",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "1117eb2c",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "17021e31",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "0d1b3ed0",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
        "array([112268234, 112268235, 112268236, 112268237, 112268238])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "f4129029",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "f4491bc2",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "6c163e2a",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "eac5ca54",
    "metadata": {},
    "outputs": [],
@@ -189,6 +189,7 @@
     "ann_medDraw_convert = []\n",
     "gt_medians = []\n",
     "gt_nGaussians = []\n",
+    "gt_bars = []\n",
     "for i in range(len(df2)):\n",
     "    d = df2.iloc[i]\n",
     "\n",
@@ -203,6 +204,7 @@
     "    gt_medians.append(np.median(xs))\n",
     "    # nGaussian from data params\n",
     "    gt_nGaussians.append(j['plot0']['data']['data params']['nclusters'])\n",
+    "    gt_bars.append(j['plot0']['data from plot']['plot params']['nbins'])\n",
     "\n",
     "    # for human draw, translate to pixels\n",
     "    xs_pixels = j['plot0']['data pixels']['xs'] # bar centers in pixels\n",
@@ -213,12 +215,13 @@
     "\n",
     "df2['Human median (draw)'] = ann_medDraw_convert\n",
     "df2['Ground Truth nGaussians'] = gt_nGaussians\n",
-    "df2['Ground Truth Median'] = gt_medians"
+    "df2['Ground Truth Median'] = gt_medians\n",
+    "df2['Ground Truth nBars'] = gt_bars"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "2fe9e9e8",
    "metadata": {},
    "outputs": [
@@ -250,6 +253,7 @@
        "      <th>Human median (draw)</th>\n",
        "      <th>Ground Truth nGaussians</th>\n",
        "      <th>Ground Truth Median</th>\n",
+       "      <th>Ground Truth nBars</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -262,6 +266,7 @@
        "      <td>0.055269</td>\n",
        "      <td>1</td>\n",
        "      <td>0.054428</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -272,6 +277,7 @@
        "      <td>0.457472</td>\n",
        "      <td>1</td>\n",
        "      <td>0.478811</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -282,6 +288,7 @@
        "      <td>-0.415863</td>\n",
        "      <td>2</td>\n",
        "      <td>-0.417302</td>\n",
+       "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -292,6 +299,7 @@
        "      <td>-0.707283</td>\n",
        "      <td>2</td>\n",
        "      <td>-0.758364</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -302,6 +310,7 @@
        "      <td>-0.171428</td>\n",
        "      <td>1</td>\n",
        "      <td>-0.178007</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -315,15 +324,22 @@
        "4  annotator1  id_0057.jpeg                 2                 -0.700   \n",
        "5  annotator1  id_0020.jpeg                 1                 -0.200   \n",
        "\n",
-       "   Human median (draw)  Ground Truth nGaussians  Ground Truth Median  \n",
-       "1             0.055269                        1             0.054428  \n",
-       "2             0.457472                        1             0.478811  \n",
-       "3            -0.415863                        2            -0.417302  \n",
-       "4            -0.707283                        2            -0.758364  \n",
-       "5            -0.171428                        1            -0.178007  "
+       "   Human median (draw)  Ground Truth nGaussians  Ground Truth Median  \\\n",
+       "1             0.055269                        1             0.054428   \n",
+       "2             0.457472                        1             0.478811   \n",
+       "3            -0.415863                        2            -0.417302   \n",
+       "4            -0.707283                        2            -0.758364   \n",
+       "5            -0.171428                        1            -0.178007   \n",
+       "\n",
+       "   Ground Truth nBars  \n",
+       "1                  50  \n",
+       "2                  50  \n",
+       "3                  45  \n",
+       "4                  50  \n",
+       "5                  50  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "0e049eac",
    "metadata": {},
    "outputs": [],
