--- a/chatgpt/chatgpt_withapi_fewshot.ipynb
+++ b/chatgpt/chatgpt_withapi_fewshot.ipynb
@@ -5,9 +5,9 @@
    "id": "c7fa3ee9-62ba-4849-9f83-8584139e295f",
    "metadata": {},
    "source": [
-    "## ChatGPT\n",
+    "## ChatGPT with Few Shot\n",
     "\n",
-    "This is just some messing around."
+    "Include some examples for ChatGPT of histograms."
    ]
   },
   {
@@ -35,17 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "017cce17-f4e8-4df6-a3b5-2edef3714601",
    "metadata": {},
    "outputs": [],
    "source": [
     "#dir_api = '/Users/jnaiman/Dropbox/Paper_JCDL2025/chatgpt_api/' # where to store API results\n",
     "\n",
-    "dir_api = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/' #store API results for example-hists\n",
+    "dir_api = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_fewshot/' #store API results for example-hists\n",
     "\n",
     "key_file = '/Users/jnaiman/.openai/key.txt'\n",
     "\n",
+    "# for fewshot\n",
+    "fewshot_dir = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/fewshot/' # assume images in \"imgs\", jsons in \"jsons\"\n",
+    "\n",
+    "# for testing images\n",
     "jsons_dir = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/jsons/' # directory where jsons created with figure are stored\n",
     "imgs_dir = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/imgs/' # where images are stored\n",
     "\n",
