adding in fewshot

--- a/explore_zooniverse_data.ipynb
+++ b/explore_zooniverse_data.ipynb
@@ -10,14 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 311,
    "id": "34bb7fc6",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_file = './zooniverse/cleaned_zooniverse.csv' # cleaned zooniverse data\n",
     "\n",
-    "dir_api = './example_hists/LLM_outputs/chatgpt_api/'"
+    "dir_api = './example_hists/LLM_outputs/chatgpt_api/'\n",
+    "\n",
+    "# what about for fewshot?\n",
+    "dir_api_fewshot = './example_hists/LLM_outputs/chatgpt_api_fewshot/'"
    ]
   },
   {
@@ -773,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": null,
    "id": "1c20f3d3",
    "metadata": {},
    "outputs": [],
@@ -813,9 +816,17 @@
     "#['median', 'ngaussian'] # JPN: this is not efficient\n",
     "# fill with LLM outputs\n",
     "for i in range(len(df2)):\n",
+    "    #### W/O FEW SHOT #####\n",
     "    pfile = dir_api + df2.iloc[i]['image file'].removesuffix('.jpeg') + '.pickle'\n",
     "    with open(pfile, 'rb') as f:\n",
     "        qa_in = pickle.load(f)[0]\n",
+    "\n",
+    "    #### WITH FEW SHOT #####\n",
+    "    # pfile_fewshot = dir_api_fewshot + df2.iloc[i]['image file'].removesuffix('.jpeg') + '.pickle'\n",
+    "    # try: # just in case we haven't run everything yet\n",
+    "    #     with open(pfile_fewshot, 'rb') as f:\n",
+    "    #         qa_in_fewshot = pickle.load(f)[0]\n",
+    "    # except:\n",
     "\n",
     "    #import sys; sys.exit()\n",
     "\n",
