--- a/chatgpt/chatgpt_withapi_fewshot.ipynb
+++ b/chatgpt/chatgpt_withapi_fewshot.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 168,
    "id": "86d2d69b",
    "metadata": {},
    "outputs": [],
@@ -373,6 +373,10 @@
     "            print('new fac = ', new_fac)\n",
     "            encoded_image = load_image(image_path,fac=new_fac, tmp_dir=tmp_dir)\n",
     "            iFac += 1\n",
+    "            #import sys; sys.exit()\n",
+    "            #success = True\n",
+    "            # break\n",
+    "            klaksljf\n",
     "    \n",
     "    if not test_run and is_subset:\n",
     "        # Get the response from the API\n",
@@ -608,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "id": "7eb0608b",
    "metadata": {},
    "outputs": [
@@ -621,13 +625,77 @@
       "on 2 of 80\n",
       "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_fewshot/id_0020.pickle\n",
       "on 3 of 80\n",
+      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_fewshot/id_0036.pickle\n",
+      "on 4 of 80\n",
+      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_fewshot/id_0061.pickle\n",
+      "on 5 of 80\n",
+      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_fewshot/id_0016.pickle\n",
+      "on 6 of 80\n",
+      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_fewshot/id_0041.pickle\n",
+      "on 7 of 80\n",
+      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_fewshot/id_0057.pickle\n",
+      "on 8 of 80\n",
       "   on question: how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
       "   on question: what are the maximum data values  in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum x\" value should be a float, calculated from the data values used to create the plot.\n",
       "   on question: what are the mean data values  in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean x\" value should be a float, calculated from the data values used to create the plot.\n",
       "   on question: what are the median data values  in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median x\" value should be a float, calculated from the data values used to create the plot.\n",
       "   on question: what are the minimum data values  in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum x\" value should be a float, calculated from the data values used to create the plot.\n",
       "   on question: how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
-      "   on question: how many gaussians were used to generate the data for the plot in the figure panel? Please choose an integer number from 1 to 5. Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n"
+      "   on question: how many gaussians were used to generate the data for the plot in the figure panel? Please choose an integer number from 1 to 5. Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
+      "Q: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
+      "ChatGPT A: Not asked\n",
+      "Real A:    50\n",
+      "\n",
+      "Q: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the maximum data values  in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum x\" value should be a float, calculated from the data values used to create the plot.\n",
+      "ChatGPT A: Not asked\n",
+      "Real A:    -0.1702186410327525\n",
+      "\n",
+      "Q: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the mean data values  in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean x\" value should be a float, calculated from the data values used to create the plot.\n",
+      "ChatGPT A: Not asked\n",
+      "Real A:    -0.26202433740053716\n",
+      "\n",
+      "Q: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the median data values  in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median x\" value should be a float, calculated from the data values used to create the plot.\n",
+      "ChatGPT A: {'median x': -0.29}\n",
+      "Real A:    -0.2681845787530464\n",
+      "\n",
+      "Q: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the minimum data values  in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum x\" value should be a float, calculated from the data values used to create the plot.\n",
+      "ChatGPT A: Not asked\n",
+      "Real A:    -0.37754538752755923\n",
+      "\n",
+      "Q: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
+      "ChatGPT A: {'ngaussians': 2}\n",
+      "Real A:    5\n",
+      "\n",
+      "Q: I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, how many gaussians were used to generate the data for the plot in the figure panel? Please choose an integer number from 1 to 5. Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
+      "ChatGPT A: {'ngaussians': 2}\n",
+      "Real A:    5\n",
+      "\n",
+      "just saved: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_fewshot/id_0000.pickle\n",
+      "on 9 of 80\n",
+      "   on question: how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
+      "   on question: what are the maximum data values  in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum x\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question: what are the mean data values  in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean x\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question: what are the median data values  in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median x\" value should be a float, calculated from the data values used to create the plot.\n",
+      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_fewshot/id_0000.pickle\n",
+      "string indices must be integers, not 'str'\n",
+      "new fac =  1.0\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'klaksljf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[168]\u001b[39m\u001b[32m, line 48\u001b[39m, in \u001b[36msend_to_chatgpt\u001b[39m\u001b[34m(question_list, client, image_path, encoded_image, model, tmp_dir, test_run, fac, img_format, verbose, subset_questions_by_keys, use_fewshot, types)\u001b[39m\n\u001b[32m     46\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m use_fewshot:\n\u001b[32m     47\u001b[39m     \u001b[38;5;66;03m#print(\"HI THERE\")\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m48\u001b[39m     prompt_sys, prompt_dummy_sys = \u001b[43mcreate_fewshot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfewshot_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m     49\u001b[39m \u001b[43m                                                 \u001b[49m\u001b[43mdir_api\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m     50\u001b[39m \u001b[43m                                                 \u001b[49m\u001b[43mquestion_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m     51\u001b[39m \u001b[43m                                                 \u001b[49m\u001b[43mtmp_dir\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mtmp_dir\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     52\u001b[39m \u001b[43m                                                 \u001b[49m\u001b[43mfac\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mfac\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtypes\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtypes\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     53\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[153]\u001b[39m\u001b[32m, line 36\u001b[39m, in \u001b[36mcreate_fewshot\u001b[39m\u001b[34m(fewshot_dir, dir_api, question_list, tmp_dir, img_dir, json_dir, fac, restart, verbose, types)\u001b[39m\n\u001b[32m     35\u001b[39m plot_level = question_list[\u001b[33m'\u001b[39m\u001b[33mtype\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m qa = parse_qa(level_parse, plot_level, qa, \u001b[43mbase_json\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mVQA\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m, types)\n\u001b[32m     37\u001b[39m \u001b[38;5;66;03m# pick the right question to get the right answer\u001b[39;00m\n",
+      "\u001b[31mTypeError\u001b[39m: string indices must be integers, not 'str'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[169]\u001b[39m\u001b[32m, line 54\u001b[39m\n\u001b[32m     52\u001b[39m responses = []\n\u001b[32m     53\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m question_list \u001b[38;5;129;01min\u001b[39;00m qa:\n\u001b[32m---> \u001b[39m\u001b[32m54\u001b[39m     response, prompt, prompt_sys = \u001b[43msend_to_chatgpt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquestion_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimg_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoded_image\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     55\u001b[39m \u001b[43m                \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimg_format\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mimg_format_media\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     56\u001b[39m \u001b[43m                \u001b[49m\u001b[43mtest_run\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_run\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubset_questions_by_keys\u001b[49m\u001b[43m=\u001b[49m\u001b[43msubset_questions_by_keys\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m     57\u001b[39m \u001b[43m                \u001b[49m\u001b[43mtypes\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtypes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muse_fewshot\u001b[49m\u001b[43m=\u001b[49m\u001b[43muse_fewshot\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     58\u001b[39m     responses.append(response)\n\u001b[32m     59\u001b[39m     question_list[\u001b[33m'\u001b[39m\u001b[33mprompt\u001b[39m\u001b[33m'\u001b[39m] = prompt\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[168]\u001b[39m\u001b[32m, line 98\u001b[39m, in \u001b[36msend_to_chatgpt\u001b[39m\u001b[34m(question_list, client, image_path, encoded_image, model, tmp_dir, test_run, fac, img_format, verbose, subset_questions_by_keys, use_fewshot, types)\u001b[39m\n\u001b[32m     94\u001b[39m         iFac += \u001b[32m1\u001b[39m\n\u001b[32m     95\u001b[39m         \u001b[38;5;66;03m#import sys; sys.exit()\u001b[39;00m\n\u001b[32m     96\u001b[39m         \u001b[38;5;66;03m#success = True\u001b[39;00m\n\u001b[32m     97\u001b[39m         \u001b[38;5;66;03m# break\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m98\u001b[39m         \u001b[43mklaksljf\u001b[49m\n\u001b[32m    100\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m test_run \u001b[38;5;129;01mand\u001b[39;00m is_subset:\n\u001b[32m    101\u001b[39m     \u001b[38;5;66;03m# Get the response from the API\u001b[39;00m\n\u001b[32m    102\u001b[39m     answer = response.choices[\u001b[32m0\u001b[39m].message.content\n",
+      "\u001b[31mNameError\u001b[39m: name 'klaksljf' is not defined"
      ]
     }
    ],
